Better fix for glyphicons not showing in the site

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -8,7 +8,7 @@ $navbar-default-brand-color:    #c0392b;
 $brand-primary:                 #c0392b;
 $jumbotron-bg:                  white;
 
-@import 'bootstrap-sprockets';
+$icon-font-path: 'bootstrap/';
 @import 'bootstrap';
 
 .center {
